--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 									<div class="message-hour ">14:25</div>
 								</div>
 								<div class="message-chat show-dots">
-									Aldo: Dale dale!
+									<p class="show-dots">Aldo: Dale dale!</p>
 								</div>
 							</div>
 						</div>
@@ -55,7 +55,7 @@
 									<div class="message-hour">11:25</div>
 								</div>
 								<div class="message-chat show-dots">
-									La clase va bien!
+									<p class="show-dots">La clase va bien!</p>
 								</div>
 							</div>
 						</div>
@@ -69,7 +69,7 @@
 									<div class="message-hour">09:25</div>
 								</div>
 								<div class="message-chat show-dots">
-									El panel de speakers está buenazo
+									<p class="show-dots">El panel de speakers está buenazo</p>
 								</div>
 							</div>
 						</div>
@@ -83,7 +83,7 @@
 									<div class="message-hour">Ayer</div>
 								</div>
 								<div class="message-chat show-dots">
-									Pues dale chamo!
+									<p class="show-dots">Pues dale chamo!</p>
 								</div>
 							</div>
 						</div>
@@ -97,7 +97,7 @@
 									<div class="message-hour">Martes</div>
 								</div>
 								<div class="message-chat show-dots">
-									¿Cómo van las chicas?
+									<p class="show-dots">¿Cómo van las chicas?</p>
 								</div>
 							</div>
 						</div>
@@ -111,7 +111,7 @@
 									<div class="message-hour">Lunes</div>
 								</div>
 								<div class="message-chat show-dots">
-									Hoy me toca clases de canto, yee!
+									<p class="show-dots">Hoy me toca clases de canto, yee!</p>
 								</div>
 							</div>
 						</div>
@@ -125,7 +125,7 @@
 									<div class="message-hour">13/01/2016</div>
 								</div>
 								<div class="message-chat show-dots">
-									Esto me encanta!! en verdad!
+									<p class="show-dots">Esto me encanta!! en verdad!</p>
 								</div>
 							</div>
 						</div>
@@ -138,7 +138,9 @@
 									<div class="name-contact show-dots">Katy Sanchez</div>
 									<div class="message-hour">11/01/2016</div>
 								</div>
-								<div class="message-chat show-dots">No te preocupes tengo el salón bajo control</div>
+								<div class="message-chat">
+									<p class="show-dots">No te preocupes tengo el salón bajo control</p>
+								</div>
 							</div>
 						</div>
 						<div class="panel-list-message-contact">
@@ -151,7 +153,7 @@
 									<div class="message-hour">03/01/2016</div>
 								</div>
 								<div class="message-chat show-dots">
-									Vao a comer?
+									<p class="show-dots">Vao a comer?</p>
 								</div>
 							</div>
 						</div>
@@ -165,7 +167,7 @@
 									<div class="message-hour">03/01/2016</div>
 								</div>
 								<div class="message-chat show-dots">
-									Feliz año!
+									<p class="show-dots">Feliz año!</p>
 								</div>
 							</div>
 						</div>
@@ -178,7 +180,9 @@
 									<div class="name-contact show-dots">Karen Valdivia</div>
 									<div class="message-hour">01/01/2016</div>
 								</div>
-								<div class="message-chat show-dots">Estoy usando flexbox *-*</div>
+								<div class="message-chat show-dots">
+									<p class="show-dots">Estoy usando flexbox *-*</p>
+								</div>
 							</div>
 						</div>
 					</div>
